force-app/main/default/objects/Device__c/fields/Activate_number__c.field-meta.xml
<CustomField>
    <fullName>Activate_number__c</fullName>
    <label>Activate number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>