force-app/main/default/objects/Device__c/fields/Device_Details__c.field-meta.xml
<CustomField>
    <fullName>Device_Details__c</fullName>
    <label>Device Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>