force-app/main/default/objects/Device__c/fields/Device_ID__c.field-meta.xml
<CustomField>
    <fullName>Device_ID__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Device ID</label>
    <type>AutoNumber</type>
</CustomField>