force-app/main/default/objects/Device__c/fields/IMEI_number__c.field-meta.xml
<CustomField>
    <fullName>IMEI_number__c</fullName>
    <label>IMEI number</label>
    <length>8</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>