force-app/main/default/objects/Device__c/fields/Manufactoring_location__c.field-meta.xml
<CustomField>
    <fullName>Manufactoring_location__c</fullName>
    <label>Manufacturing location</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>