force-app/main/default/objects/Device__c/fields/Max_discount__c.field-meta.xml
<CustomField>
    <fullName>Max_discount__c</fullName>
    <label>Max discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>