force-app/main/default/objects/Device__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Celeron</fullName>
            </value>
            <value>
                <fullName>I3 10th gen</fullName>
            </value>
            <value>
                <fullName>I3 11th gen</fullName>
            </value>
            <value>
                <fullName>i5</fullName>
            </value>
            <value>
                <fullName>i7</fullName>
            </value>
            <value>
                <fullName>i9</fullName>
            </value>
            <value>
                <fullName>Ryzen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>