force-app/main/default/objects/Device__c/fields/Refurbished__c.field-meta.xml
<CustomField>
    <fullName>Refurbished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refurbished</label>
    <type>Checkbox</type>
</CustomField>