force-app/main/default/objects/Device__c/fields/Seller_email__c.field-meta.xml
<CustomField>
    <fullName>Seller_email__c</fullName>
    <label>Seller email</label>
    <type>Email</type>
</CustomField>