force-app/main/default/objects/Device__c/fields/Serial_number__c.field-meta.xml
<CustomField>
    <fullName>Serial_number__c</fullName>
    <label>Serial number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>