force-app/main/default/objects/Device__c/fields/Specifications__c.field-meta.xml
<CustomField>
    <fullName>Specifications__c</fullName>
    <label>Specifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSD</fullName>
            </value>
            <value>
                <fullName>HDD</fullName>
            </value>
            <value>
                <fullName>Backlit</fullName>
            </value>
            <value>
                <fullName>15&quot; display</fullName>
            </value>
            <value>
                <fullName>14&quot; display</fullName>
            </value>
            <value>
                <fullName>Fingerprint</fullName>
            </value>
            <value>
                <fullName>Touch</fullName>
            </value>
            <value>
                <fullName>180 degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>