force-app/main/default/objects/Device__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Version</label>
    <referenceTo>Windows_version__c</referenceTo>
    <relationshipLabel>Devices</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <type>Lookup</type>
</CustomField>